# github-dotfiles

./: .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  pubspec.yaml  setup-mac.sh  version_bump.dart
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/check/: action.yml
.github/workflows/: lock-merged-prs.yml  ollama.yml  pre-commit.yml  release.yml  version-bump.yml
auth/: login.sh
git-hooks/: pre-push
homebrew-scripts/: install-common-tools.sh  install-utilities.sh
ollama/: Cargo.toml  README.md  quick-start.sh
ollama-tool/: Cargo.toml  README.md
ollama-tool/src/: main.rs
ollama/src/: cli.rs  lib.rs  main.rs  models.rs  ollama.rs  prompts.rs
ollama/tests/: e2e.rs  integration.rs
restore/: update_and_restore.sh
sync/: dotfiles-sync.sh
