[package]
name = "github-dotfiles-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
scraper = "0.18"
thiserror = "1.0"

[dev-dependencies]
httpmock = "0.8"
